# git-ripper

./: pyproject.toml
.github/workflows/: poetry.yml
.github/workfows/: poetry.yml
