[tool.poetry]
name = "git-ripper"
version = "0.1.9"
description = "Downloads git repos from the web."
authors = ["s3rgeym <yamldeveloper@proton.me>"]
license = "MIT"
repository = "https://github.com/s3rgeym/git-ripper"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-ripper = "git_ripper.cli:main"
